# Monster-Fight-Game

./: .gitignore  CMakeLists.txt  README.md
Header/: Dragons.h  LogR.h  MonsterFightGame.h  RenderingGame.h  Spiders.h
Source/: Dragons.cpp  Dragons.h  LogR.cpp  LogR.h  MonsterFightGame.cpp  Monsters.cpp  Monsters.h  RenderingGame.cpp  Spiders.cpp
tests/: test_dragon.cpp  test_monsterfightgame.cpp  test_rendergame.cpp  test_spider.cpp
